# paradom

./: .gitignore  AUDIT.md  CONTRIBUTING.md  DOCUMENTATION.md  README.md  adam_alpaca.parquet  create_dataset.py  finetune_paradox.py  implementation_plan.md  implementation_plan_phase2.md  paradox_alpaca.parquet  pyproject.toml  requirements.txt  smoke_test.py  svg.md  task.md
architecture/: ARCHITECTURE.md
benchmarks/: phase2_llama3_to_mamba.json
checkpoints/: tiny_mamba_trained.pt  tiny_transformer_trained.pt
configs/: arch_genesis.yaml  arch_sovereign.yaml  arch_sovereign_master.yaml
doc/: CONTRIBUTING.md  analysis.md
docs/: CODE_SCAFFOLD.py  KNOWN_LIMITATIONS_AND_CONTRIBUTING.md  colab-instruction.md
nova_ai/: chat_nova.py  chat_nova_v2.py  config_nova_v2.json  engineer_nova.py  engineer_research.py  engineer_supersymmetry.py  engineer_symmetry.py
paradom/: __init__.py
paradox_ai/: config_ultra.yaml  main.py  test_intelligence.py
phases/: PHASES_2_TO_5.md
research/: AWFE_PHASE_2_REPORT.md  EXPERIMENT_001_RESULTS.json  EXPERIMENT_001_RESULTS.md  EXPERIMENT_002_RATIO_SWEEP.json  EXPERIMENT_002_RATIO_SWEEP.md  ROADMAP_LANGUAGE_AWARE_TRUNCATION.md
scratch/: CONCEPTS_LOG.md  DESIGN_activation_aware.md  ablation_test.py  build_paradox.py  colab_run.sh  cross_architecture_test.py  custom_awfe_test.py  finetune_recovery_test.py  finetune_recovery_v2.py  functional_projection_test.py  hf_end_to_end_test.py  paradom_checkpoint.py  test_convert.py  test_mappers.py  test_ot_swap.py  test_svd.py
scripts/: analyze_importance.py  audit_master.py  chat_numpy.py  (+17 more)
(+86 files in other folders)
