[tool.poetry]
name = "paradom"
version = "0.1.0"
description = "Universal Weight Equivalence Framework for Cross-Architecture Translation"
authors = ["Paradom Team"]
readme = "README.md"
packages = [{include = "paradom"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
transformers = "^4.40.0"
safetensors = "^0.4.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
POT = "^0.9.0"
huggingface-hub = "^0.22.0"
pyyaml = "^6.0.1"
typer = "^0.12.0"
rich = "^13.7.0"
tqdm = "^4.66.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-benchmark = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
