[project]
name = "paradom"
version = "0.1.0"
description = "A universal weight equivalence framework for ML/DL paradigms."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "POT>=0.9.0",
    "huggingface-hub>=0.22.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
]

[project.scripts]
paradom = "paradom.cli.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
